2002-12-28  Joshua Sled  <jsled@asynchronous.org>

	* src/register/register-gnome/formulacell-gnome.c: Changed
	FormulaCell from MOD_SX to MOD_REGISTER.

	* src/engine/FreqSpec.c (xaccFreqSpecGetFreqStr):
	s/g_string_sprintf/snprintf/, as the former can't handle the
	re-ordered format parameters which the po-files use; fixes
	Bug#101650.

2002-12-28  David Hampton  <hampton@employees.org>

	* src/gnome-utils/dialog-transfer.c: Revert pricedb lookup at
	warlord's request.

	* src/bin/test/Makefile.am:
	* src/doc/Makefile.am:
	* src/import-export/hbci/Makefile.am: 
	* src/import-export/ofx/Makefile.am: Get 'make distcheck' working again.

2002-12-28  Christian Stimming  <stimming@tuhh.de>

	* src/scm/main.scm: Patch by Peter O'Gorman <peter@pogma.com> for
	Mac OS X.

2002-12-27  Christian Stimming  <stimming@tuhh.de>

	* src/engine/test-core/Makefile.am: Fix linker errors in
	src/engine/test/

	* src/import-export/hbci/hbci-interaction.c: Fix reparent
	warnings. Make the PIN dialog a bit nicer.

	* src/import-export/hbci/gnc-hbci-getbalance.c: Always use the
	"booked balance" instead of sometimes one or the other.

	* po/de.po: Updated translation.

2002-12-23  David Hampton  <hampton@employees.org>

	* src/import-export/qif-import/qif-parse.scm: Fix regexps to
	handle a leading '+' sign in the currency field. (Bug reported on
	gnucash-user.)


	* src/gnome-utils/gnc-html.c: The stream_handler hook needs to
	return a file size. Not all files opened by this function are
	ASCII text.  Reset the base_location properly when switching
	documents. Add debugging. #101783

	* src/report/report-gnome/window-report.c: Update the various
	functions used as stream_handlers to return correct file
	sizes. #101783


	* configure.in: When checking for gtkhtml-1.1, make the lack of
	pkg-config a fatal error. Also check for pkgconfig due to some
	clueless software mismanagement.

	* macros/autogen.sh: Enable -Werror for all builds.
	
