@@ -1,3 +1,8 @@
+2002-12-29  Christian Stimming  <stimming@tuhh.de>
+
+	* src/gnome/dialog-scheduledxaction.c, dialog-sxsincelast.c: Some
+	i18n fixes.
+
 2002-12-28  Joshua Sled  <jsled@asynchronous.org>
 
 	* src/register/register-gnome/formulacell-gnome.c: Changed
